# external/external.go
@@ -1,24 +1,14 @@
 package external
 
-// Package external provides utility functions to fetch external data from APIs.
-// It includes functions to get age, gender, and nationality based on a person's name.
-
 import (
 	"encoding/json"
 	"errors"
 	"fmt"
 	"io"
 	"net/http"
+	"strings"
 )
 
-// GetAge fetches the estimated age for a given name from an external API.
-// @Summary Get estimated age
-// @Description GetAge fetches the estimated age for a given name using the Agify API.
-// @Tags external
-// @Param name query string true "Name to estimate age for"
-// @Success 200 {integer} int "Estimated age"
-// @Failure 500 {string} string "Failed to fetch age"
-// @Router /external/age [get]
 func GetAge(name string) (int, error) {
 	resp, err := http.Get(fmt.Sprintf("https://api.agify.io?name=%s", name))
 	if err != nil {
@@ -41,14 +31,6 @@ func GetAge(name string) (int, error) {
 	return int(age), nil
 }
 
-// GetGender fetches the gender for a given name from an external API.
-// @Summary Get gender
-// @Description GetGender fetches the gender for a given name using the Genderize API.
-// @Tags external
-// @Param name query string true "Name to fetch gender for"
-// @Success 200 {string} string "Gender"
-// @Failure 500 {string} string "Failed to fetch gender"
-// @Router /external/gender [get]
 func GetGender(name string) (string, error) {
 	resp, err := http.Get(fmt.Sprintf("https://api.genderize.io/?name=%s", name))
 	if err != nil {
@@ -68,7 +50,14 @@ func GetGender(name string) (string, error) {
 	if !ok {
 		return "", errors.New("failed to fetch gender")
 	}
-	return gender, nil
+	switch strings.ToLower(gender) {
+	case "male":
+		return "m", nil
+	case "female":
+		return "f", nil
+	default:
+		return "", errors.New("unknown gender")
+	}
 }
 
 type NationalityResponse struct {
@@ -78,14 +67,6 @@ type NationalityResponse struct {
 	} `json:"country"`
 }
 
-// GetNationality fetches the nationality for a given name from an external API.
-// @Summary Get nationality
-// @Description GetNationality fetches the nationality for a given name using the Nationalize API.
-// @Tags external
-// @Param name query string true "Name to fetch nationality for"
-// @Success 200 {string} string "Nationality"
-// @Failure 500 {string} string "Failed to fetch nationality"
-// @Router /external/nationality [get]
 func GetNationality(name string) (string, error) {
 	resp, err := http.Get(fmt.Sprintf("https://api.nationalize.io/?name=%s", name))
 	if err != nil {
